force-app/main/default/objects/Product_Line_Pelple_Num__c/Product_Line_Pelple_Num__c.object-meta.xml
<CustomObject>
    <label>Product Line Pelple Num</label>
    <nameField>
        <displayFormat>PLPN-{YYYY}{MM}{0000}</displayFormat>
        <label>Product Line Pelple Num Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Line Pelple Num</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>