force-app/main/default/objects/Product_Line_Pelple_Num__c/fields/HA__c.field-meta.xml
<CustomField>
    <fullName>HA__c</fullName>
    <label>HA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>