force-app/main/default/objects/Product_Line_Pelple_Num__c/fields/Hisense_TV__c.field-meta.xml
<CustomField>
    <fullName>Hisense_TV__c</fullName>
    <label>Hisense TV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>