force-app/main/default/objects/Product_Line_Pelple_Num__c/fields/MIX__c.field-meta.xml
<CustomField>
    <fullName>MIX__c</fullName>
    <label>MIX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>